fix your-bag animation on mobile

--- a/ites.css
+++ b/ites.css
@@ -42,7 +42,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: auto;
+        min-height: 40vh;
         justify-content: center;
         align-items: center;
         font-size: 1.4rem;
@@ -52,12 +52,13 @@
         background-color: rgba(0, 0, 0, 0.5);
         border: none;
         padding: 1rem 0 1rem 0;
-        z-index: 1;
-        display: none;
+        top: -40vh;
+        transition: top 0.3s ease;
+        z-index: 100;
     }
 
     .nav-menu-visible {
-        display: flex;
+        top: 5.1vh;
     }
 
     .orange-span {
