--- a/your-bag.css
+++ b/your-bag.css
@@ -1,5 +1,21 @@
 @media (max-width: 768px) {
 
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 99;
+    }
+    .overlay-visible {
+        opacity: 1;
+        visibility: visible;
+    }
     .container {
         position: fixed;
         width: 100%;
@@ -17,6 +33,10 @@
 
     .container-visibility {
         top: 0;
+    }
+    .bag-hidden {
+        height: 0;
+        overflow: hidden;
     }
 
     .container-header {
